Mobile view fixes
Fixed issues where: 1. Skills weren't shown correctly on mobile ; 2. Borders were too big on mobile

--- a/css/skill.css
+++ b/css/skill.css
@@ -1,6 +1,9 @@
 .skills-container {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
+    box-sizing: border-box;
 }
+
 
 .skill {
     display: flex;
